--- a/WIP/Labour1/frontend/src/App.css
+++ b/WIP/Labour1/frontend/src/App.css
@@ -518,8 +518,12 @@
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 5px;
+    font-size: medium;
   }
   .authForm .input::placeholder {
+    font-size: medium;
+  }
+  .authForm .input:focus {
     font-size: medium;
   }
 
